# cnfts-elixir

./: .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
example/: README.md  mix.exs
example/lib/: example.ex
lib/: cnft.ex  solana.ex
native/cnft/: Cargo.toml  README.md
native/cnft/src/: lib.rs  test.rs
native/cnft/src/instructions/: create.rs  mint.rs  mod.rs  transfer.rs
test/: cnft_test.exs
