[package]
name = "cnft"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "cnft"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
mpl-bubblegum = "1.4.0"
solana-sdk = "~1.18.11"
solana-program = "~1.18.11"
solana-client = "~1.18.11"
spl-account-compression = { version = "0.3.1", features = [
  "no-entrypoint",
  "cpi",
] }
spl-merkle-tree-reference = "0.1.0"
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.4"
